--- a/index.html
+++ b/index.html
@@ -10,17 +10,30 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="portfolio.css">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <div id="header">
-    <img src="./assets/logo.png" style="display:inline-block;vertical-align:middle;">
+    <img src="./assets/logo.png" style="display:inline-block;vertical-align:middle;" >
     <h1 style="display:inline-block; text-align:center;vertical-align:middle;">IPT Architecture</h1>
     <div id="menu">
       <a href="./index.html" style="margin-left:10vw;">Portfolio</a>
       <a href="./resume.pdf">Resume</a>
-      <a href="mailto:ianptibbetts@gmail.com ">Contact</a>
+      <a href="mailto:ianptibbetts@gmail.com">Contact Me</a>
+    </div>
+  </div>
+  <div id="mobileHeader">
+    <img src="./assets/logo.png" style="display:inline-block;vertical-align:middle;">
+    <h1 style="display:inline-block; text-align:center;vertical-align:middle;">IPT Architecture</h1>
+    <span class="material-icons" id="menuButton" onclick="mobileMenu();">
+      menu
+    </span>
+    <div id="mobileMenu">
+      <a href="./index.html" style="">Portfolio</a><br>
+      <a href="./resume.pdf">Resume</a><br>
+      <a href="mailto:ianptibbetts@gmail.com">Contact Me</a>
     </div>
   </div>
   <div id="portfolio">
