--- a/project.html
+++ b/project.html
@@ -7,7 +7,8 @@
   <title>IPT Architecture</title>
   <meta name="description" content="IPT Architecture Portfolio">
   <meta name="author" content="Ian Tibbetts">
-
+  <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+      
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
