--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
   <meta name="description" content="IPT Architecture Portfolio">
   <meta name="author" content="Ian Tibbetts">
   <meta name="viewport" content="width=device-width; initial-scale=1.0;">
-      
+
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
@@ -17,7 +17,7 @@
   </head>
   <div id="header">
     <img src="./assets/logo.png" style="display:inline-block;vertical-align:middle;" >
-    <h1 style="display:inline-block; text-align:center;vertical-align:middle;">IPT Architecture</h1>
+    <h1 style="display:inline-block; text-align:center;vertical-align:middle;"><a href="./index.html">IPT Architecture</a></h1>
     <div id="menu">
       <a href="./index.html" style="margin-left:10vw;">Portfolio</a>
       <a href="./resume.pdf">Resume</a>
@@ -26,7 +26,7 @@
   </div>
   <div id="mobileHeader">
     <img src="./assets/logo.png" style="display:inline-block;vertical-align:middle;">
-    <h1 style="display:inline-block; text-align:center;vertical-align:middle;">IPT Architecture</h1>
+    <h1 style="display:inline-block; text-align:center;vertical-align:middle;"><a href="./index.html">IPT Architecture</a></h1>
     <span class="material-icons" id="menuButton" onclick="mobileMenu();">
       menu
     </span>
