--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>IPT Architecture</title>
   <meta name="description" content="IPT Architecture Portfolio">
   <meta name="author" content="Ian Tibbetts">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="portfolio.css">
